...
                .foregroundColor(.white)
                .fixedSize(horizontal: false, vertical: true)
                .frame(width: UIScreen.main.bounds.width * 0.85, alignment: .topLeading)
                .padding([.leading, .trailing])
            
            VStack (spacing: 10){
                AppTextField(placeHolder: "Enter Your Email address", text: $email)
                AppSecureField(placeHolder: "Password at least 7 characters long", text: $password)
            }
            .padding(.horizontal, 24)
            
            
            Button {
                Task {
...
