...
            
            WelcomeText()
                .frame(width: UIScreen.main.bounds.width * 0.85, alignment: .topLeading)
                .padding([.leading, .trailing])
            
            VStack (spacing: 17){
                AppTextField(placeHolder: "Email address", text: $email)
                AppSecureField(placeHolder: "Password", text: $password)
            }
            .padding(.horizontal, 24)
            
            
            
            Button {
...
