...
                            }
                            .padding()
                            .foregroundColor(.white)
                            .background(Color("LightTeal").opacity(0.85))
                            .cornerRadius(40)
                        }
                        .accessibilityIdentifier("Add")
                        .padding(.leading, 20)
                        .padding(.bottom, 20)
                        
                        Spacer()
                    }
                }
...
