...
                     }
                     }*/
                } else {
                    UINotificationFeedbackGenerator().notificationOccurred(.error)
                }
            } label: {
                Text("Create")
                    .font(Font.system(size: 23))
                    .fontWeight(.semibold)
                    .padding()
                    .foregroundColor(Color(uiColor: .white))
                    .frame(maxWidth:.infinity)
                    .frame(height: 55)
...
